--- a/Dockerfile.tex
+++ b/Dockerfile.tex
@@ -4,7 +4,8 @@ MAINTAINER Marcel Grossmann <whatever4711@gmail.com>
 ENV dir /src
 RUN apt-get update && \
     apt-get install -y \
-    make \    
+    make \
+    git \
     texlive-base \
     texlive-latex-extra \
     texlive-lang-german \
